--- a/edfacts_dispute_resolution.ipynb
+++ b/edfacts_dispute_resolution.ipynb
@@ -10,7 +10,7 @@
         "pOmvRCYQ26e_",
         "pBIx8H802_fF"
       ],
-      "authorship_tag": "ABX9TyM3Jk1GCdF7MD+Fi1NYNf8A",
+      "authorship_tag": "ABX9TyNAY0EvxsTjYsURIAtTcmpl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **EDFacts Dispute Resolution**\n",
+        "# **EDFacts IDEA Part B Dispute Resolution**\n",
         "\n",
         "## **EDFacts Submission in EDPass:**\n",
         "\n",
@@ -56,7 +56,9 @@
         "- **SPPI 15** - Resolution Sessions. % of hearing requests that went to resolution sessions that were resolved through resolution session settlement agreements.\n",
         "- **SPPI 16** -  Mediation. % of mediations held resulting in mediation agreements.\n",
         "\n",
-        "> **LEAs -> CDRMS -> EDFacts -> EDPass -> SPP/APR -> SEA Determination**"
+        "> **LEAs -> CDRMS -> EDFacts -> EDPass -> SPP/APR -> SEA Determination**\n",
+        "\n",
+        "# **Python Scripts**\n"
       ],
       "metadata": {
         "id": "JP_8YaGTxSlE"
@@ -65,7 +67,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# FS227 – IDEA Part B Dispute Resolution Written, Signed Complaints"
+        "## **FS227 – Written, Signed Complaints**"
       ],
       "metadata": {
         "id": "cq4Onbet2pqr"
@@ -438,7 +440,7 @@
         "id": "jlrsQUq_2u7m",
         "outputId": "4ad8e080-dc8a-4401-f9b9-76df62cbbf8a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -564,7 +566,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# FS228 – IDEA Part B Dispute Resolution Mediation Requests"
+        "## **FS228 – Mediation Requests**"
       ],
       "metadata": {
         "id": "3q1d8Sky21lN"
@@ -1048,7 +1050,7 @@
         "id": "ggAKPSxk25kR",
         "outputId": "3bd07fa6-1e4e-4690-d06c-6eda4e3a07eb"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1202,7 +1204,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# FS229 – IDEA Part B Dispute Resolution Due Process Complaints"
+        "## **FS229 – Due Process Complaints**"
       ],
       "metadata": {
         "id": "pOmvRCYQ26e_"
@@ -1773,7 +1775,7 @@
         "id": "gUxuammH2-dS",
         "outputId": "6fcc1c5d-92b6-4a77-a6c7-25cbaffd3014"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1935,7 +1937,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **FS230** – IDEA Part B Dispute Resolution Expedited Due Process Complaints"
+        "## **FS230 – Expedited Due Process Complaints**"
       ],
       "metadata": {
         "id": "pBIx8H802_fF"
@@ -2524,7 +2526,7 @@
         "id": "hcGYl_7k3kfw",
         "outputId": "0735ca03-5692-492b-a9a6-e7f3966cd84d"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2688,13 +2690,15 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# **Contact**\n",
+        "\n",
+        "For questions or to report errors, email [zane.wubbena@tea.texas.gov](zane.wubbena@tea.texas.gov)"
+      ],
       "metadata": {
-        "id": "iOSbbxIsAi2m"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "8Gi03YUNCaYh"
+      }
     }
   ]
 }
