--- a/edfacts_dispute_resolution.ipynb
+++ b/edfacts_dispute_resolution.ipynb
@@ -10,7 +10,7 @@
         "pOmvRCYQ26e_",
         "pBIx8H802_fF"
       ],
-      "authorship_tag": "ABX9TyNAY0EvxsTjYsURIAtTcmpl",
+      "authorship_tag": "ABX9TyNwAK9fWZtly9jfNoVtwCjK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
       "source": [
         "# **EDFacts IDEA Part B Dispute Resolution**\n",
         "\n",
-        "## **EDFacts Submission in EDPass:**\n",
+        "## **EDFacts Submissions in EDPass:**\n",
         "\n",
         "EDFacts Dispute Resolution data submissions in EDPass for the 2024-25 school year include four file specification (FS) documents:\n",
         "\n",
