--- a/edfacts_dispute_resolution.ipynb
+++ b/edfacts_dispute_resolution.ipynb
@@ -11,7 +11,7 @@
         "pOmvRCYQ26e_",
         "pBIx8H802_fF"
       ],
-      "authorship_tag": "ABX9TyNZ0WVxXh3SW9//L1rwpoQI",
+      "authorship_tag": "ABX9TyOfplVQ2Wsg11aAjHoGe2l6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,8 +37,16 @@
       "cell_type": "markdown",
       "source": [
         "# **EDFacts IDEA Part B Dispute Resolution**\n",
-        "\n",
-        "## EDFacts Submissions in EDPass\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "JP_8YaGTxSlE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **EDFacts Submissions in EDPass**\n",
         "\n",
         "EDFacts Dispute Resolution data submissions in EDPass for the 2024-25 school year include four file specification (FS) documents:\n",
         "\n",
@@ -50,23 +58,21 @@
         "\n",
         "**EDPass as a Submission Platform:** EDPass is the primary system used by State Education Agencies (SEAs) to upload and submit EDFacts data, including dispute resolution data, to the U.S. Department of Education. The new file specification documents were published in May 2025.\n",
         "\n",
-        "## State Performance Plan Indicators (SPPI)\n",
+        "## **State Performance Plan Indicators (SPPI)**\n",
         "\n",
         "The EDFacts data map to the two indicators in the State Performance Plan/Annual Performance Report (SPP/APR).\n",
         "\n",
         "- **SPPI 15** - Resolution Sessions. % of hearing requests that went to resolution sessions that were resolved through resolution session settlement agreements.\n",
-        "- **SPPI 16** -  Mediation. % of mediations held resulting in mediation agreements.\n",
-        "\n",
-        "\n"
+        "- **SPPI 16** -  Mediation. % of mediations held resulting in mediation agreements."
       ],
       "metadata": {
-        "id": "JP_8YaGTxSlE"
+        "id": "rhrYbC2AOhp0"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Workflow\n",
+        "# **Workflow**\n",
         "\n",
         "> **LEAs -> CDRMS -> EDFacts -> EDPass -> SPP/APR -> SEA Determination**"
       ],
